# medical-3d-viewer

./: .gitignore  Dockerfile.go  Dockerfile.python  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  pyproject.toml
.streamlit/: config.toml
configs/: app.yaml  models.yaml
go_renderer/cmd/renderer/: main.go
go_renderer/internal/mesh/: generator.go  simplify.go  tables.go
go_renderer/internal/server/: server.go  viewer.go
go_renderer/internal/volume/: loader.go
go_renderer/pkg/nifti/: reader.go
go_renderer/web/static/css/: viewer.css
rust_inference/: Cargo.toml
rust_inference/src/: config.rs  inference.rs  main.rs  nifti_io.rs  postprocess.rs  preprocess.rs  progress.rs
scripts/: export_onnx.py
src/medical_viewer/: __main__.py  app.py
src/medical_viewer/core/: cleanup.py  config.py  constants.py  database.py  export.py  session.py  volume_cache.py
src/medical_viewer/inference/: __init__.py  model_registry.py  nnunet_runner.py  pipeline.py  weight_scanner.py
src/medical_viewer/mpr/: __init__.py  fast_render.py  measurements.py  oblique.py  slicer.py  windowing.py
src/medical_viewer/renderer/: client.py
src/medical_viewer/ui/: history.py  model_manager.py  pages.py  progress.py  seg_editor.py  sidebar.py  upload.py  viewer_3d.py  viewer_mpr.py
tests/: test_database.py  test_export.py  test_export_onnx.py  test_fast_render.py  test_nnunet_runner.py  test_oblique.py  test_pipeline.py  test_slicer.py  test_weight_scanner.py  test_windowing.py
