[package]
name = "nnunet-infer"
version = "0.1.0"
edition = "2021"
description = "Fast nnUNet inference engine using ONNX Runtime"

[dependencies]
ort = "2.0.0-rc.12"
nifti = "0.16"
ndarray = "0.17"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
anyhow = "1"
flate2 = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
